<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="news.com.financial_news_android.Login"
    android:background="#d32f2f">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="100dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:hint="@string/prompt_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="#ffffff"
                    android:textColorHint="#ff7a7b"
                    android:textColor="#000000"
                    android:ellipsize="end"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:background="#ffffff"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColorHint="#ff7a7b"
                    android:textColor="#000000" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:background="#424242"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/email_register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:background="#424242"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
